# dxmini-update_agent

./: LICENSE  requirements.txt  setup.cfg
dxmini/: __init__.py  agent.py  cli.py  ping.py  provision.py
dxmini/lib/: libgit.py  libjenkins.py  logginglib.py  utils.py
