[metadata]
name = dxmini
author = Jonathan Kelley
author-email = jonkelley@gmail.com
maintainer = Jon Kelley
maintainer-email = jonkelley@gmail.com
home-page = https://github.com/jondkelley/dxmini
summary = Not really
license = FreeBSD
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Intended Audience :: Developers
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 2.7
        Topic :: Utilities
requires-dist =
    docopt
keywords =
    dxmini
[files]
packages =
    dxmini
    python-jenkins
[entry_points]
console_scripts =
     dxmini = dxmini.cli:main
