[metadata]
name = dxmini
author = Jonathan Kelley
author-email = jonkelley@gmail.com
maintainer = Jon Kelley
maintainer-email = jonkelley@gmail.com
home-page = https://github.com/jondkelley/dxmini
summary = DXMINI Update Agent and Utilities
license = Copyright
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Programming Language :: Python :: 3.0
        Topic :: Utilities
requires-dist =
    docopt
keywords =
    dxmini
[files]
packages =
    dxmini
[entry_points]
console_scripts =
     dxmini = dxmini.cli:main
